Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress-host-ssl-routing
  annotations:    
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: service1.thomas-zuehlke.de
    http:
      paths:
      - path: /
        backend:
          serviceName: sslservice1-service
          servicePort: 443
  - host: service2.thomas-zuehlke.de
    http:
      paths:
      - path: /
        backend:
          serviceName: sslservice2-service
          servicePort: 443
